--- a/src/main/resources/templates/featureReport.vm
+++ b/src/main/resources/templates/featureReport.vm
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="blue/css/reset.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="blue/css/text.css" type="text/css" media="screen" />
 	<link rel="shortcut icon" href="blue/favicon.ico" />
-    #if($artifactsEnabled)
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.17/jquery-ui.min.js"></script>
         <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" rel="stylesheet" />
@@ -19,6 +18,42 @@
          <script src="CodeMirror-2.33/mode/xml/xml.js"></script>
 
         <script type="text/javascript">
+            function toggleStepLog(button, stepNum) {
+               var elem = $("#step-output-" + stepNum);
+               if (elem.is(":visible")) {
+                 button.html("+ Log");
+               } else {
+                 button.html("- Log");
+               }
+               elem.toggle();
+            }
+
+            function toggleError(button, stepNum) {
+               var elem = $("#step-error-" + stepNum);
+               if (elem.is(":visible")) {
+                 button.html("+ Error");
+               } else {
+                 button.html("- Error");
+               }
+               elem.toggle();
+            }
+
+            function toggleDocString(button, stepNum) {
+               var elem = $("#docstring-" + stepNum);
+               if (elem.is(":visible")) {
+                 button.html("+ DocString");
+                 elem.hide();
+               } else {
+                 button.html("- DocString");
+                 elem.css("display", "inline-block");
+               }
+            }
+
+            $(document).ready(function() {
+              $(".scenario-name").click(function() {
+                $(this).next().toggle();
+              });
+            });
 
             editorArray = new Array();
 
@@ -45,7 +80,6 @@
                        }
 
         </script>
-    #end
 <style>
     .CodeMirror-scroll {
       height: auto;
@@ -61,9 +95,13 @@
 .feature-tags{padding-top:10px;padding-left:15px;color:darkblue;}
 .scenario-keyword{font-weight:bold;padding-left:15px;}
 .scenario-scenario_name{padding-left:15px;}
+
+.scenario-name {
+  cursor: pointer;
+}
+
 .step-keyword{font-weight:bold;padding-left:50px;}
-.step-error-message{background-color:#FFEEEE;padding-left:50px;border: 1px solid #D88A8A;}
-.step-duration{float:right;padding-right:15px;}
+.step-duration{padding-right:15px;}
 .passed{background-color:#C5D88A;}
 .failed{background-color:#D88A8A;}
 .skipped{background-color:#2DEAEC;}
@@ -131,14 +169,60 @@ table.data-table td {
     padding-top: 10px;
 }
 
-.output-data {
-    padding-left:50px;
+.step-right {
+    float: right;
+}
+
+.expand-button {
+    cursor: pointer;
+    padding-left: 4px;
+    padding-right: 4px;
+    margin-right: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: lightgray;
+    background: -webkit-linear-gradient(#c0c0c0, #f0f0f0);
+    background: -o-linear-gradient(#c0c0c0, #f0f0f0);
+    background: -moz-linear-gradient(#c0c0c0, #f0f0f0); 
+    background: linear-gradient(#c0c0c0, #f0f0f0);
+}
+
+.step-error {
+  padding-left: 70px;
+}
+
+.step-error-message {
+  display:none;
+  margin: 10px 25px 10px 0px;
+  padding: 5px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.step-error-message {
+  display:none;
+  background-color:#FFEEEE;
+  padding-left:50px;
+  border: 1px solid #D88A8A;
+}
+
+.step-output {
+    padding-left:70px;
+    overflow: hidden;
     background-color: beige;
+}
+
+.step-output-data {
+    margin: 10px 25px 10px 0px;
+    padding: 5px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .doc-string {
     width:auto;
     display:inline-block;
+    overflow: hidden;
     margin: 10px auto 10px 70px;
     padding: 10px;
     background-color:rgba(255,255,255,0.35);
@@ -203,12 +287,14 @@ table.data-table td {
             $feature.getName()
             $feature.getDescription()
 
+            #set ($ctr = 1)
             #foreach($scenario in $scenarios)
                 $scenario.getTagsList()
-                $scenario.getName()
+                <div class='scenario-name'>$scenario.getName()</div>
+                <div class='scenario-body'>
                 #foreach($step in $scenario.getSteps().toList())
-                  $step.getName()
-                    $step.getDocStringOrNothing()
+                    $step.getName($ctr)
+                    $step.getDocStringOrNothing($ctr)
                     #if($step.hasRows())
                         <div class="data $step.getDataTableClass()">
                         <table class="data-table">
@@ -222,10 +308,15 @@ table.data-table td {
                       </table>
                         </div>
                     #end
-                  <div class="output-data">$step.getOutput()</div>
+                  #if ( $step.hasOutput() )
+                    <div id='step-output-$ctr' class="step-output" style="display:none">
+                      <div class="step-output-data"><pre>$step.getOutput()</pre></div>
+                    </div>
+                  #end
+                  #set ($ctr = $ctr + 1)
                 #end
+                </div>
             #end
-
 	</div>
 	</div>
 
