--- a/src/main/resources/templates/featureReport.vm
+++ b/src/main/resources/templates/featureReport.vm
@@ -259,6 +259,13 @@ body {
   font-weight: 900;
 }
 
+.table {
+  border: 2px solid grey;
+}
+
+.table thead > tr > th { 
+  border-bottom: 2px solid gray;
+}
 </style>
 
 </head>
