--- a/src/main/resources/templates/featureOverview.vm
+++ b/src/main/resources/templates/featureOverview.vm
@@ -25,7 +25,7 @@
 .step-error-message{background-color:#FFEEEE;padding-left:50px;border: 1px solid #D88A8A;}
 
 body {
-  background-color: darkgreen;
+  background-color: #204000;
   font-size: 14px;
 }
 
